# PluginForObsRelease

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  buildspec.json  cmake-toolchain-arm64.cmake  cross-compile.sh  linux-cross-compile.sh  linux-dependencies.sh
build-aux/: pre-commit  run-clang-format  run-gersemi  setup-hooks.ps1  setup-hooks.sh
cmake/common/: bootstrap.cmake  buildspec_common.cmake  compiler_common.cmake  helpers_common.cmake  plugin-cpack.cmake  preconfig.cmake
cmake/linux/: FindLibObs.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake  install.sh
cmake/macos/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake  xcode.cmake
cmake/macos/resources/: create-package.cmake.in  distribution.in
cmake/patches/: apply-juce-patches.cmake  juce-effect-min-scale.patch
cmake/windows/: buildspec.cmake  compilerconfig.cmake  copy_qt_debug_dlls.cmake  helpers.cmake
cmake/windows/resources/: installer-Windows.iss.in
lib/atkaudio/: CMakeLists.txt
lib/atkaudio/JUCE/modules/juce_gui_basics/native/: juce_Windowing_windows.cpp
lib/atkaudio/cmake/: cpack.cmake  preconfig.cmake
lib/atkaudio/cmake/linux/: install.sh
lib/atkaudio/src/atkaudio/: About.h  AtomicSharedPtr.h  AudioModule.h  CpuInfo.h  CpuMeter.h  Delay.h  DeviceIo.h  FifoBuffer.cpp  FifoBuffer.h  FifoBuffer2.h  JuceApp.h  LookAndFeel.h  MessagePump.cpp  PluginHost.h  PluginHost2.h  QtParentedWindow.h  QtParentedWindowDebug.cpp  QtParentedWindowDebug.h  RealtimeThread.h  SandboxedPluginScanner.cpp  SandboxedPluginScanner.h  SharedPluginList.h  UpdateCheck.h  atkAudioModule.h  atkaudio.cpp  atkaudio.h
lib/atkaudio/src/atkaudio/AudioProcessorGraphMT/: AdaptiveSpinLock.h  AudioGraphAnalysisExamples.h  AudioProcessorGraphMT.cpp  AudioThreadPool.h  DagPartitioner.h  DependencyTaskGraph.h  GraphPartitioner.h  README.md  SubgraphExtractor.h
lib/atkaudio/src/atkaudio/Delay/: Delay.cpp
lib/atkaudio/src/atkaudio/DeviceIo/: AudioAppDemo.h  AudioDeviceSelectorComponent.cpp  AudioDeviceSelectorComponent.h  DeviceIo.cpp  DeviceIo.h  DeviceIoApp.h  SettingsComponent.h
lib/atkaudio/src/atkaudio/DeviceIo2/: DeviceIo2.cpp  DeviceIo2.h  DeviceIo2App.h  DeviceIo2SettingsComponent.h
lib/atkaudio/src/atkaudio/ModuleInfrastructure/: ARCHITECTURE.md  COORDINATOR_ROLE.md  MIGRATION.md  MULTIPLE_MODULES.md  PLUGINHOST3_USAGE.md  README.md
lib/atkaudio/src/atkaudio/ModuleInfrastructure/AudioServer/: AudioServer.cpp  AudioServer.h  AudioServerSettingsComponent.cpp  AudioServerSettingsComponent.h  ChannelRoutingMatrix.cpp  ChannelRoutingMatrix.h
lib/atkaudio/src/atkaudio/ModuleInfrastructure/Bridge/: ModuleAudioDevice.h  ModuleAudioIODeviceType.h  ModuleAudioServerDevice.h  ModuleBridge.h  ModuleDeviceManager.h
lib/atkaudio/src/atkaudio/ModuleInfrastructure/MidiServer/: MidiServer.cpp  MidiServer.h  MidiServerSettingsComponent.cpp  MidiServerSettingsComponent.h
lib/atkaudio/src/atkaudio/PluginHost/: JuceHostPlugin.h  PluginHost.cpp  PluginHost.h  SecondaryThreadPool.h  StandaloneFilterWindow.h
lib/atkaudio/src/atkaudio/PluginHost/API/: PluginHost.h
lib/atkaudio/src/atkaudio/PluginHost/Core/: HostAudioProcessor.cpp  HostAudioProcessor.h  PluginHolder.cpp  PluginHolder.h
lib/atkaudio/src/atkaudio/PluginHost/UI/: HostEditorWindow.cpp  HostEditorWindow.h  PluginEditorComponent.h  PluginHostFooter.h  PluginLoaderComponent.h  QtDockWidget.h  UICommon.h
lib/atkaudio/src/atkaudio/PluginHost2/: ObsOutput.h  ObsSource.h  PluginHost2.cpp  PluginHost2.h  VirtualAudioIoDevice.h  ph2_AudioDeviceSelectorComponent.cpp  ph2_AudioDeviceSelectorComponent.h
lib/atkaudio/src/atkaudio/PluginHost2/API/: PluginHost2.h
lib/atkaudio/src/atkaudio/PluginHost2/Core/: ARAPlugin.cpp  ARAPlugin.h  DelayLinePlugin.cpp  DelayLinePlugin.h  DeviceIo2Plugin.h  GainPlugin.h  InternalPlugins.cpp  InternalPlugins.h  ObsOutput.h  ObsSource.h  PluginGraph.cpp  PluginGraph.h
lib/atkaudio/src/atkaudio/PluginHost2/Ph2DeviceIo/: Ph2DeviceIo.h
lib/atkaudio/src/atkaudio/PluginHost2/Plugins/: ARAPlugin.h  GainPlugin.h  IOConfigurationWindow.cpp  IOConfigurationWindow.h  InternalPlugins.cpp  InternalPlugins.h  MidiGainPlugin.h  PluginGraph.cpp  PluginGraph.h
lib/atkaudio/src/atkaudio/PluginHost2/UI/: GraphEditorPanel.cpp  GraphEditorPanel.h  IOConfigurationWindow.cpp  IOConfigurationWindow.h  MainHostWindow.cpp  MainHostWindow.h  PluginWindow.h  ScannerSubprocess.h
lib/atkaudio/src/scanner/: CMakeLists.txt  PluginScanner.cpp
src/: CMakeLists.txt  CompareVersionStrings.h  Delay.cpp  DeviceIo.cpp  MessagePump.cpp  MessagePump.h  PluginHost.cpp  SourceMixer.cpp  autoreset.cpp  config.h.in  device_io.cpp  device_io2.cpp  plugin-main.cpp  plugin_host.cpp  plugin_host2.cpp  plugin_host2_helper.cpp  source_mixer.cpp
src/core/: atkaudio.cpp
src/core/atkaudio/: About.h  Delay.h  FifoBuffer.h  FifoBuffer2.h  GlobalSettings.cpp  GlobalSettings.h  Logging.cpp  Logging.h  MessagePump.cpp  MessagePump.h  ObsJucePluginFormatLifecycle.cpp  ObsJucePluginFormatLifecycle.h  SandboxedPluginScanner.cpp  SandboxedPluginScanner.h  SharedPluginList.cpp  SharedPluginList.h  UpdateCheck.h  atkAudioModule.h  atkaudio.h
src/core/atkaudio/AudioProcessorGraphMT/: AdaptiveSpinLock.h  AudioProcessorGraphMT.cpp  AudioProcessorGraphMT.h  DagPartitioner.h  RealtimeThreadPool.h  SpinWait.h  SubgraphExtractor.h
src/core/atkaudio/Delay/: Delay.cpp
src/core/atkaudio/DeviceIo/: DeviceIo.cpp  DeviceIo.h  DeviceIoApp.h
src/core/atkaudio/DeviceIo2/: DeviceIo2.cpp  DeviceIo2.h
src/core/atkaudio/ModuleInfrastructure/AudioServer/: AudioServer.cpp  AudioServer.h  AudioServerSettingsComponent.cpp  AudioServerSettingsComponent.h  ChannelRoutingMatrix.cpp  ChannelRoutingMatrix.h
src/core/atkaudio/ModuleInfrastructure/Bridge/: ModuleAudioDevice.cpp  ModuleAudioDevice.h  ModuleAudioServerDevice.h  ModuleDeviceManager.h
src/core/atkaudio/PluginHost/: PluginHost.cpp  PluginHost.h
src/core/atkaudio/PluginHost2/: PluginGraph.cpp  PluginGraph.h  PluginHost2.cpp  PluginHost2.h
src/scanner/: CMakeLists.txt
(+37 files in other folders)
